@@ -24,6 +24,7 @@ plots
    heatmap
    HectoPascalFormatter
    HectoPascalLogFormatter
+   label_axes
    mpl_colors
    plot_distribution_as_percentiles
    profile_p
